--- a/TradeProAssistant/Views/WeeklyIncome/Index.cshtml
+++ b/TradeProAssistant/Views/WeeklyIncome/Index.cshtml
@@ -3,39 +3,35 @@
 @{
     /**/
 
+    /**/
+
     ViewBag.tab = "WeeklyIncome";
 }
 
-@using (Html.BeginForm("Index", "WeeklyIncome", FormMethod.Post))
+@*@using (Html.BeginForm("Index", "WeeklyIncome", FormMethod.Post))
 {
-    @*<div class="form-group row">
-            @Html.LabelFor(x => x.Symbol, new { @class = "col-sm-2 col-form-label" })
 
-            <div class="col-sm-10">
-                @Html.TextBoxFor(m => m.Symbol, new { @class = "form-control" })
-            </div>
-        </div>*@
     <div class="form-group row">
         @Html.LabelFor(x => x.Symbol, new { @class = "col-sm-2 col-form-label" })
 
         <div class="col-sm-10">
             @(Html.Kendo().ComboBoxFor(x => x.Symbol)
-                                            .Placeholder("Select a security")
-                                            .DataTextField("SymbolAndName")
-                                            .DataValueField("Symbol")
-                                            .HtmlAttributes(new { style = "width:100%;" })
-                                            .Filter("contains")
-                                            .AutoBind(false)
-                                            .MinLength(2)
-                                            .Delay(250)
-                                            .DataSource(source =>
-                                            {
-                                                source.Read(read =>
-                                                {
-                                                    read.Action("GetSecurities", "Scanner");
-                                                })
-                                                .ServerFiltering(true);
-                                            })
+                                                                    .Placeholder("Select a security")
+                                                                    .DataTextField("SymbolAndName")
+                                                                    .DataValueField("Symbol")
+                                                                    .HtmlAttributes(new { style = "width:100%;" })
+                                                                    .Filter("contains")
+                                                                    .AutoBind(false)
+                                                                    .MinLength(2)
+                                                                    .Delay(250)
+                                                                    .DataSource(source =>
+                                                                    {
+                                                                        source.Read(read =>
+                                                                        {
+                                                                            read.Action("GetSecurities", "Scanner");
+                                                                        })
+                                                                        .ServerFiltering(true);
+                                                                    })
             )
         </div>
     </div>
@@ -54,3 +50,16 @@
         </div>
     </div>
 }
+
+<hr />*@
+
+@using (Html.BeginForm("GenerateWeeklyIncome", "WeeklyIncome", FormMethod.Post))
+{
+    <div class="form-group row">
+        <div class="col-sm-12 text-center">
+            <button type="submit" class="btn btn-success">Generate Weekly Income</button>
+        </div>
+    </div>
+}
+
+
