--- a/TradeProAssistant/Views/WeeklyIncome/Index.cshtml
+++ b/TradeProAssistant/Views/WeeklyIncome/Index.cshtml
@@ -49,11 +49,52 @@
 
     <hr />*@
 
+@using (Html.BeginForm("GeneratePlaySheet", "WeeklyIncome", FormMethod.Post))
+{
+    <div class="card" style="margin-bottom: 1rem;">
+        <div class="card-body">
+            <div class="form-group row">
+                <label for="generatePlaySheetSlots" class="col-sm-2 col-form-label">Slots</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="generatePlaySheetSlots" name="generatePlaySheetSlots" placeholder="Slots" value="5">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="generatePlaySheetMaxRisk" class="col-sm-2 col-form-label">Max Risk</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="generatePlaySheetMaxRisk" name="generatePlaySheetMaxRisk" placeholder="Max Risk" value="15">
+                </div>
+            </div>
+            <div class="form-group row" style="margin-bottom: 0;">
+                <div class="col-sm-12 text-center">
+                    <button type="submit" class="btn btn-warning">Generate Play Sheet</button>
+                </div>
+            </div>
+        </div>
+    </div>
+}
+
 @using (Html.BeginForm("BuildPlan", "WeeklyIncome", FormMethod.Post))
 {
-    <div class="form-group row">
-        <div class="col-sm-12 text-center">
-            <button type="submit" class="btn btn-primary">Build Plan</button>
+    <div class="card" style="margin-bottom: 1rem;">
+        <div class="card-body">
+            <div class="form-group row">
+                <label for="buildPlanSlots" class="col-sm-2 col-form-label">Slots</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="buildPlanSlots" name="buildPlanSlots" placeholder="Slots" value="5">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="buildPlanMaxRisk" class="col-sm-2 col-form-label">Max Risk</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="buildPlanMaxRisk" name="buildPlanMaxRisk" placeholder="Max Risk" value="15">
+                </div>
+            </div>
+            <div class="form-group row" style="margin-bottom: 0;">
+                <div class="col-sm-12 text-center">
+                    <button type="submit" class="btn btn-primary">Build Plan</button>
+                </div>
+            </div>
         </div>
     </div>
 }
