--- a/TradeProAssistant/Views/WeeklyIncome/_PlaySheetsTable.cshtml
+++ b/TradeProAssistant/Views/WeeklyIncome/_PlaySheetsTable.cshtml
@@ -1,39 +1,43 @@
 ﻿@(Html.Kendo().Grid<SimpleWeeklyIncomePlaySheetDto>()
-        .Name("playSheetsGrid")
-        .Columns(columns =>
-        {
-            columns.Bound(x => x.TimeStamp).ClientTemplate("<a href='WeeklyIncome/PlaySheet?id=#= Identifier #' >#= TimeStampDisplay #</>").Width(75);
-            columns.Bound(x => x.Expiry).Format("{0:M/d/yy}").Width(75);
-            columns.Bound(x => x.Slots).Width(75);
-            columns.Bound(x => x.RiskPerSlot).Width(75).Format("{0:c2}").Title("Risk/Slot");
-            columns.Bound(x => x.Credit).Width(75).Format("{0:c2}");
-            columns.Bound(x => x.RequiredCapital).Width(75).Format("{0:c2}").Title("Capital Requirements");
-            columns.Bound(x => x.Used).ClientTemplate("<input type='checkbox' #= Used ? \"checked='checked'\" : \"\" # class='usedCheckbox' data-identifier='#= Identifier #' />").Width(50);
+            .Name("playSheetsGrid")
+            .Columns(columns =>
+            {
+                columns.Bound(x => x.TimeStamp).ClientTemplate("<a href='WeeklyIncome/PlaySheet?id=#= Identifier #' >#= TimeStampDisplay #</>").Width(75);
+                columns.Bound(x => x.Expiry).Format("{0:M/d/yy}").Width(75);
+                columns.Bound(x => x.Slots).Width(75);
+                columns.Bound(x => x.RiskPerSlot).Width(75).Format("{0:c2}").Title("Risk/Slot");
+                columns.Bound(x => x.Credit).Width(75).Format("{0:c2}");
+                columns.Bound(x => x.RequiredCapital).Width(75).Format("{0:c2}").Title("Capital Requirements");
+                columns.Bound(x => x.Used).ClientTemplate("<input type='checkbox' #= Used ? \"checked='checked'\" : \"\" # class='usedCheckbox' data-identifier='#= Identifier #' />").Width(50);
 
-        })
-        //.HtmlAttributes(new { style = "height: 730px;" })
-        .PersistSelection()
-    .Sortable(sortable => sortable
-        .AllowUnsort(false))
-    .Pageable(pageable => pageable
-        .Refresh(true)
-        .ButtonCount(5))
-    .Scrollable()
-    .Filterable(filterable => filterable
-        .Extra(false)
-    //.Operators(operators => operators
-    //.ForString(str => str.Clear()
-    //    .IsEqualTo("Is")
-    //))
-    )
-    .DataSource(dataSource => dataSource
-        .Ajax()
-        .Sort(sort => sort.Add(x => x.TimeStamp).Descending())
-        .PageSize(25)
-        .Read(read =>
-        {
-            read.Action("PlaySheets_Read", "WeeklyIncome");
-        }
+            })
+            //.HtmlAttributes(new { style = "height: 730px;" })
+            .PersistSelection()
+        .Sortable(sortable => sortable
+            .AllowUnsort(false))
+        .Pageable(pageable => pageable
+            .Refresh(true)
+            .ButtonCount(5))
+        .Scrollable()
+        .Filterable(filterable => filterable
+            .Extra(false)
+        //.Operators(operators => operators
+        //.ForString(str => str.Clear()
+        //    .IsEqualTo("Is")
+        //))
         )
-    )
+        .DataSource(dataSource => dataSource
+            .Ajax()
+            .Sort(sort => sort.Add(x => x.TimeStamp).Descending())
+            .PageSize(25)
+            .Read(read =>
+            {
+                read.Action("PlaySheets_Read", "WeeklyIncome");
+            }
+            )
+        )
+            .ToolBar(toolbar =>
+            {
+                toolbar.Template(@<text><button id="purgeButton" type="button" class="btn btn-primary">Purge</button></text>);
+                    })
 )
