--- a/TradeProAssistant/Views/WeeklyIncome/_SecuritiesTable.cshtml
+++ b/TradeProAssistant/Views/WeeklyIncome/_SecuritiesTable.cshtml
@@ -3,12 +3,16 @@
             .Columns(columns =>
             {
                 columns.Bound(x => x.Symbol).Width(75);
-                columns.Bound(x => x.Name).Width(250);
+                columns.Bound(x => x.Name).Width(175);
                 columns.Bound(x => x.NextEarningsDate).Format("{0:d}").Width(75).Title("Next Earnings");
                 columns.Bound(x => x.ExDividendDate).Format("{0:d}").Width(75).Title("Ex Dividend");
                 columns.Bound(x => x.Ignore).ClientTemplate("<input type='checkbox' #= Ignore ? \"checked='checked'\" : \"\" # class='ignoreCheckbox' data-identifier='#= Identifier #' />").Width(50);
-                columns.Bound(x => x.IsBullish).ClientTemplate("<input type='checkbox' #= IsBullish ? \"checked='checked'\" : \"\" # class='isBullishCheckbox' data-identifier='#= Identifier #' />").Width(50);
-                columns.Bound(x => x.IsBearish).ClientTemplate("<input type='checkbox' #= IsBearish ? \"checked='checked'\" : \"\" # class='isBearishCheckbox' data-identifier='#= Identifier #' />").Width(50);
+                columns.Bound(x => x.IsBullish).Title("Bull").ClientTemplate("<input type='checkbox' #= IsBullish ? \"checked='checked'\" : \"\" # class='isBullishCheckbox' data-identifier='#= Identifier #' />").Width(50);
+                columns.Bound(x => x.IsBearish).Title("Bear").ClientTemplate("<input type='checkbox' #= IsBearish ? \"checked='checked'\" : \"\" # class='isBearishCheckbox' data-identifier='#= Identifier #' />").Width(50);
+                columns.Bound(x => x.IronCondorEligible).Title("IC").ClientTemplate("<input type='checkbox' #= IronCondorEligible ? \"checked='checked'\" : \"\" # class='ironCondorEligibleCheckbox' data-identifier='#= Identifier #' />").Width(50);
+                columns.Bound(x => x.Support).ClientTemplate("<input type='text' class='supportTextbox' data-identifier='#= Identifier #' value='#= Support #' style='width: 90px;' />").Width(80);
+                columns.Bound(x => x.Resistance).ClientTemplate("<input type='text' class='resistanceTextbox' data-identifier='#= Identifier #' value='#= Resistance #' style='width: 90px;' />").Width(80);
+                columns.Command(command => command.Custom("Go").Click("updateSR")).Width(55);
     //columns.Bound(x => x.Total).Width(100).Format("{0:c2}");
 
 })
