--- a/TradeProAssistant/Views/WeeklyIncome/Index.cshtml
+++ b/TradeProAssistant/Views/WeeklyIncome/Index.cshtml
@@ -46,10 +46,11 @@
                             <div class="form-group row">
                                 <label for="actions" class="col-sm-2 col-form-label">Actions</label>
                                 <div class="col-sm-10">
-                                    <select id="actions" name="actions" class="form-control" multiple="multiple" size="4">
+                                    <select id="actions" name="actions" class="form-control" multiple="multiple" size="5">
                                         <option value="@((int)WeeklyIncomeActions.SetImportantDates)" selected="selected">@WeeklyIncomeActions.SetImportantDates.GetStringValue()</option>
                                         <option value="@((int)WeeklyIncomeActions.DownloadOptionChains)" selected="selected">@WeeklyIncomeActions.DownloadOptionChains.GetStringValue()</option>
-                                        <option value="@((int)WeeklyIncomeActions.GeneratePlaySheet)" selected="selected">@WeeklyIncomeActions.GeneratePlaySheet.GetStringValue()</option>
+                                        <option value="@((int)WeeklyIncomeActions.GeneratePairCondorPlaySheet)" selected="selected">@WeeklyIncomeActions.GeneratePairCondorPlaySheet.GetStringValue()</option>
+                                        <option value="@((int)WeeklyIncomeActions.GenerateIronCondorPlaySheet)" selected="selected">@WeeklyIncomeActions.GenerateIronCondorPlaySheet.GetStringValue()</option>
                                         <option value="@((int)WeeklyIncomeActions.SetBenzingaIds)">@WeeklyIncomeActions.SetBenzingaIds.GetStringValue()</option>
                                     </select>
                                 </div>
@@ -137,15 +138,15 @@
                             }, 500);
                         });
                 })
-                .on("click", "#purgeButton", function () {
-                    var url = $("#uxInput_RootUrl").val() + 'WeeklyIncome/Purge';
-                    $.post(url, {}, function () {
-                        $("#playSheetsGrid").data("kendoGrid").dataSource.read();
-                        setTimeout(function () {
-                            $("#playSheetsGrid .k-grid-content").css("height", "").css("max-height", $(window).height() - 300);
-                        }, 500);
-                    });
-                })
+                //.on("click", "#purgeButton", function () {
+                //    var url = $("#uxInput_RootUrl").val() + 'WeeklyIncome/Purge';
+                //    $.post(url, {}, function () {
+                //        $("#playSheetsGrid").data("kendoGrid").dataSource.read();
+                //        setTimeout(function () {
+                //            $("#playSheetsGrid .k-grid-content").css("height", "").css("max-height", $(window).height() - 300);
+                //        }, 500);
+                //    });
+                //})
                 .on("click", "#newsWatchlist button", function () {
                     var url = $("#uxInput_RootUrl").val() + 'WeeklyIncome/GetNews';
                     $.post(url, {
