--- a/TradeProAssistant/Views/Shared/_Layout.cshtml
+++ b/TradeProAssistant/Views/Shared/_Layout.cshtml
@@ -15,6 +15,7 @@
     <script src="https://kendo.cdn.telerik.com/2019.3.1023/js/jszip.min.js"></script>
     <script src="https://kendo.cdn.telerik.com/2019.3.1023/js/kendo.all.min.js"></script>
     <script src="https://kendo.cdn.telerik.com/2019.3.1023/js/kendo.aspnetmvc.min.js"></script>
+    @Scripts.Render("~/bundles/moment")
     <script src="@Url.Content("~/Scripts/kendo.modernizr.custom.js")"></script>
 </head>
 <body>
@@ -39,6 +40,12 @@
                         <li class='@String.Format("nav-item{0}", ViewBag.tab == "WeeklyIncome" ? " active" : "")'>
                             @Html.ActionLink("Weekly Income", "Index", "WeeklyIncome", null, new { @class = "nav-link" })
                         </li>
+                        <li class='@String.Format("nav-item{0}", ViewBag.tab == "HakDecoder" ? " active" : "")'>
+                            @Html.ActionLink("HAK Decoder", "Decoder", "HuntAKiller", null, new { @class = "nav-link" })
+                        </li>
+                        <li class='@String.Format("nav-item{0}", ViewBag.tab == "Strategies" ? " active" : "")'>
+                            @Html.ActionLink("Strategies", "Strategies", "TradeProStrategy", null, new { @class = "nav-link" })
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -56,11 +63,12 @@
     </div>
 
     <input type="hidden" id="uxInput_RootUrl" value="@Url.Content("~")" />
-
+    <input type="hidden" id="uxInput_RiskParameters" value="@JsonConvert.SerializeObject(GlobalSettings.ActiveRiskParameters)" />
 
     @Scripts.Render("~/bundles/jquerySignalR")
     <script src="~/signalr/hubs"></script>
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/site")
 
     <script src="~/Content/dist/js/app.js"></script>
 
